--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ bind-key x command-prompt -p "split-window:"  "split-window '%%' -p 75"
 bind ^B last-window 
 
 # aktif pane kenarlik rengi
-set -g pane-active-border-fg colour16
-set -g pane-border-fg colour16
+#set -g pane-active-border-fg colour16
+#set -g pane-border-fg colour16
 
 unbind C-Down
 bind -n C-Down resize-pane -D 10
