--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,7 @@ bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux
 
 set -g history-file ~/.tmux_history
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
+#set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set-option -g default-shell "/bin/bash"
