config files changed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # statusbar'i goster/gizle
-bind-key -n C-f3 set-option -g status 
+bind-key -n C-w set-option -g status 
 
 # yeni dikey pane 75'ini alsin.
 bind-key x command-prompt -p "split-window:"  "split-window '%%' -p 75" 
