vim-tmux eklenti uyumlulugu saglandi. Xresources'taki degisiklik geri alindi.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,24 @@ set -g default-terminal "screen-256color"
 #set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set-option -g default-shell "/bin/bash"
+
+# plugin manager kurulum
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/vim-tmux-clipboard'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+set -g @yank_selection 'clipboard' # or 'secondary' or 'clipboard' or 'primary'
