nihayet solarized temasinin tmux icinde comment'teki gorunum hatasi duzeldi

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # statusbar'i goster/gizle
-bind-key -n C-w set-option -g status 
+bind-key -n C-f3 set-option -g status 
 
-# yeni dikey pane 75'ini alsin.
-bind-key x command-prompt -p "split-window:"  "split-window '%%' -p 75" 
+# yeni dikey pane 77'ini alsin.
+bind-key x command-prompt -p "split-window:"  "split-window '%%' -p 76" 
 
 # Son pencereler arasinda gezinme
 bind ^B last-window 
@@ -26,7 +26,8 @@ bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux
 
 set -g history-file ~/.tmux_history
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
+#set -g default-terminal "screen-256color"
 #set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set-option -g default-shell "/bin/bash"
