tmux yeni eklentiler - continuum, sessionist

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,9 +37,13 @@ set-option -g default-shell "/bin/bash"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/vim-tmux-clipboard'
 
@@ -52,3 +56,5 @@ set -g @plugin 'tmux-plugins/vim-tmux-clipboard'
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g @yank_selection 'clipboard' # or 'secondary' or 'clipboard' or 'primary'
+set -g @resurrect-strategy-vim 'session'
+# set -g @continuum-boot 'on'
