--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,8 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/vim-tmux-clipboard'
+set -g @plugin 'jbnicolai/tmux-fpp'
+
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -57,4 +59,5 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g @yank_selection 'clipboard' # or 'secondary' or 'clipboard' or 'primary'
 set -g @resurrect-strategy-vim 'session'
-# set -g @continuum-boot 'on'
+set -g @resurrect-process 'keep-presence  "--seconds 60"'
+ set -g @continuum-boot 'on'
