--- a/.config/regolith/i3/config
+++ b/.config/regolith/i3/config
@@ -661,6 +661,8 @@ set_from_resource $i3-wm.program.2 i3-wm.program.2 :
 exec --no-startup-id $i3-wm.program.2
 set_from_resource $i3-wm.program.3 i3-wm.program.3 :
 exec --no-startup-id $i3-wm.program.3
-set_from_resource $i3-wm.bindsym.1 i3-wm.bindsym.1 :
-set_from_resource $i3-wm.bindsym.program.1 i3-wm.bindsym.program.1 :
-bindsym $mod+$i3-wm.bindsym.1 exec --no-startup-id "$i3-wm.bindsym.program.1"
+
+set_from_resource $i3-wm.bindsym.2 i3-wm.bindsym.2 :
+set_from_resource $i3-wm.bindsym.program.2 i3-wm.bindsym.program.2 :
+bindsym $mod+$i3-wm.bindsym.2 exec --no-startup-id "$i3-wm.bindsym.program.2"
+#exec --no-startup-id /home/cavitg/.config/regolith/i3/layout.sh
