--- a/.taskrc
+++ b/.taskrc
@@ -21,7 +21,7 @@ data.location=~/.task
 #include /usr/share/taskwarrior/dark-red-256.theme
 #include /usr/share/taskwarrior/dark-green-256.theme
 #include /usr/share/taskwarrior/dark-blue-256.theme
-#include /usr/share/taskwarrior/dark-violets-256.theme
+include /usr/share/taskwarrior/dark-violets-256.theme
 #include /usr/share/taskwarrior/dark-yellow-green.theme
 #include /usr/share/taskwarrior/dark-gray-256.theme
 #include /usr/share/taskwarrior/dark-gray-blue-256.theme
@@ -72,4 +72,10 @@ report.q4.filter=status:pending limit:page pri.not:H and ( due.after:today+1w or
 #report.work.filter=status:pending
 #journal.time=on
 #dateformat.annotation=d\/m\/Y H:N
-context.work=pro:work
+uda.reviewed.type=date
+uda.reviewed.label=Reviewed
+report._reviewed.description=Tasksh review report.  Adjust the filter to your needs.
+report._reviewed.columns=uuid
+report._reviewed.sort=reviewed+,modified+
+report._reviewed.filter=( reviewed.none: or reviewed.before:now-6days ) and ( +PENDING or +WAITING )
+context.devops=project:work -deploy -local_comp -outlook
