--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,7 @@ set -g history-file ~/.tmux_history
 #set -g default-terminal "xterm-256color"
 #set -g default-terminal "xterm"
 set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color-bce"
 #set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set-option -g default-shell "/bin/bash"
