some changes from ubuntu

--- a/.gitconfig
+++ b/.gitconfig
@@ -36,3 +36,5 @@
 	cmd = code --wait --diff $LOCAL $REMOTE 
 #[credential]
 #	helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-manager.exe
+[credential]
+	helper = store
