--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ set -g default-terminal "screen-256color"
 #set -g default-terminal "screen-256color-bce"
 #set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
-set-option -g default-shell "/bin/bash"
+set-option -g default-shell "/bin/zsh"
 
 # plugin manager kurulum
 # List of plugins
@@ -62,4 +62,4 @@ run '~/.tmux/plugins/tpm/tpm'
 set -g @yank_selection 'clipboard' # or 'secondary' or 'clipboard' or 'primary'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-process 'keep-presence  "--seconds 60"'
- set -g @continuum-boot 'on'
+set -g @continuum-boot 'on'
