--- a/.gitconfig
+++ b/.gitconfig
@@ -38,3 +38,5 @@
 #	helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-manager.exe
 [credential]
 	helper = store
+[http]
+	sslverify = false
