--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,19 +36,19 @@ set -ga terminal-overrides ",*256col*:Tc"
 
 # plugin manager kurulum
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/vim-tmux-clipboard'
-set -g @plugin 'jbnicolai/tmux-fpp'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-sessionist'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-open'
+#set -g @plugin 'tmux-plugins/tmux-sidebar'
+#set -g @plugin 'tmux-plugins/tmux-logging'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/vim-tmux-clipboard'
+#set -g @plugin 'jbnicolai/tmux-fpp'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -56,7 +56,7 @@ set -g @plugin 'jbnicolai/tmux-fpp'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
 
 set -g @yank_selection 'clipboard' # or 'secondary' or 'clipboard' or 'primary'
 set -g @resurrect-strategy-vim 'session'
@@ -65,3 +65,7 @@ set -g @continuum-boot 'on'
 # bind -n C-k clear-history
 # bind -n C-k send-keys ^c clear Enter \; clear-history \;
 bind -n C-o send-keys -R Enter \; clear-history \;
+
+# update VSCODE variables from integrated terminal so that `code` command opens
+# in current window
+set-option -ga update-environment ' VSCODE_GIT_ASKPASS_NODE VSCODE_GIT_ASKPASS_MAIN VSCODE_IPC_HOOK_CLI PATH GIT_ASKPASS'
