--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,12 @@
 [user]
-	email = cavit@orkun.space
-	name = cavit
+	email = cavitorkun.gunay@vodafone.com
+	name = cavit orkun
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
 [core]
-  excludesfile = ~/.gitignore
-  autocrlf = input
+	excludesFile = ~/.gitignore
+	autocrlf = input
 	editor = code --wait
     pager = delta
 [interactive]
@@ -33,7 +33,7 @@
 [diff]
 	tool = vscode
 [difftool "vscode"]
-	cmd = code --wait --diff $LOCAL $REMOTE 
+	cmd = code --wait --diff $LOCAL $REMOTE
 #[credential]
 #	helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-manager.exe
 [credential]
